change the result of categories to from 3 to 2 because handle it on mobile is difficult | change the height and width of the beforeAfterDecor and now it's cute | fix the header in searchResult of mobile which wasn't centered

--- a/app/static/css/base/_globals.scss
+++ b/app/static/css/base/_globals.scss
@@ -329,8 +329,8 @@ input {
 .beforeAfterDecor {
     &::before {
         content: '';
-        width: 5.18rem;
-        height: 0.487rem;
+        width: 3.18rem;
+        height: 0.187rem;
         background: #363636;
         margin-right: 1rem;
         display: inline-flex;
@@ -339,8 +339,8 @@ input {
 
     &::after {
         content: '';
-        width: 5.18rem;
-        height: 0.487rem;
+        width: 3.18rem;
+        height: 0.187rem;
         background: #363636;
         margin-right: 1rem;
         display: inline-flex;
