--- a/app/static/css/templates/_searchResult.scss
+++ b/app/static/css/templates/_searchResult.scss
@@ -22,6 +22,11 @@
         > h4 {
             width: 100%;
             margin: 0 0 2rem 0;
+
+            @include breakpoints-down(medium) {
+                text-align: center;
+                margin-bottom: 1.125rem;
+            }
         }
     
         &__item {
@@ -65,6 +70,10 @@
 
         @include breakpoints-down(medium) {
             width: 100%;
+
+            h3 {
+                text-align: center;
+            }
         }
         
         &__item {
